analisi rischi (da finire)

--- a/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
@@ -229,8 +229,8 @@ Ogni rischio è caratterizzato da:
 \end{adjustwidth}
 
 
-\subsection{Attuazione nel periodo}
-
+\subsection{Attualizzazione nel periodo}
+\label{sec:attualizzazione}
 \begin{adjustwidth}{-3cm}{-3cm}
 \begin{center}
 \begin{tabular}{| p{3cm} | p{3.5cm} | p{3.5cm} | p{3.5cm} |}
@@ -262,6 +262,41 @@ Nome & \AR & \ARI & \PA \\
 \end{center}
 \end{adjustwidth}
 
+%%%%%%%%%% PDC, VV
+\newpage
+\begin{adjustwidth}{-3cm}{-3cm}
+\begin{center}
+\begin{tabular}{| p{2.5cm} | p{5.5cm} | p{5.5cm} |}
+\hline
+Nome & \PDC & \VV \\
+	\hline
+	tecnologie adottate & Rischio verificatosi: 
+	\begin{itemize}
+	\item La libreria JointJS è risultata poco documentata e complessa da apprendere. Il team ha quindi impiegato più risorse per apprendere la tecnologia e comprendere il suo funzionamento.
+	\item La libreria RequireJS è risultata incompatibile con vari framework di testing provati (Cheerio, [!]). Sono state trovate delle soluzioni "artigianali": [!].
+    \end{itemize} & Rischio non verificatosi. \\
+	rotture hardware & Rischio non verificatosi. & Rischio non verificatosi. \\
+	problemi personali dei membri & Rischio non verificatosi. & Rischio verificatosi: una influenza ha impedito ad un membro del gruppo di partecipare alla riunione con il proponente del 04-05-2017.\\
+	problemi di inesperienza & Rischio verificatosi: il team si è trovato di fronte a delle sfide più grandi di quanto inizialmente preventivato e ciò ha influenzato la pianificazione, accrescendo il carico di ore non rendicontate e portando a non concludere tutti gli obiettivi prefissati al sostenimento della \emph{Revisione di Qualifica}. Si stima il ritardo dello svolgimento delle varie attività preventivate pari al 30\%. Vedi \nameref{sec:consuntivo}. & Rischio non verificatosi. \\
+	
+	
+	\end{tabular}
+\end{center}
+\end{adjustwidth}
+
+\begin{adjustwidth}{-3cm}{-3cm}
+\begin{center}
+\begin{tabular}{| p{2.5cm} | p{5.5cm} | p{5.5cm} |}
+
+	
+	pianificazione errata & Rischio verificatosi, vedi \nameref{sec:consuntivo} & Il ritardo delle attività preventivato per la \PDC{} ha portato ad un accrescimento dei costi di circa il 150\%; tuttavia il carico inizialmente preventivato risultava piuttosto basso e quindi questo accrescimento (in misura assoluta pari a quello della \PDC) non risulta troppo ostacolante al team. \\
+	incomprensioni e scelte non congrue & Rischio non verificatosi. & Rischio non verificatosi. \\
+	 errore nelle previsioni & Rischio non verificatosi. & Rischio non verificatosi.\\
+	% sinceramente fonderei errore nelle previsioni e pianificazione errata
+	\hline
+\end{tabular}
+\end{center}
+\end{adjustwidth}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
