spostate immagini MU in cartella apposita

--- a/Esterni/Manuale_utente/Manuale_utente_1_0_0.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_1_0_0.tex
@@ -76,7 +76,7 @@ Vi viene subito presentato un diagramma delle classi vuoto, come in figura \ref{
 % screenshot index.html
 \begin{figure}
 \centering
-	\includegraphics[scale=0.46]{screen_index_2}
+	\includegraphics[scale=0.46]{img/screen_index_2}
 	\caption{Interfaccia grafica.}
 	\label{fig:screen}
 \end{figure}
