pdp (da finire)

--- a/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
@@ -1983,6 +1983,117 @@ Il costo totale del progetto \proj{} preventivato è pari a \textbf{11259{\euro}
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\pagebreak
+\subsection{Consuntivo \VV}
+\introconsuntivo{\VV}
+
+\subsubsection{Variazioni nella pianificazione}
+
+Non sono risultati ritardi nell'attuazione delle attività preventivate.
+
+Al fine di conseguire il miglior risultato possibile, il team ha deciso di utilizzare ulteriori ore (6) per permettere una migliore riuscita delle attività di verifica, portando dunque il totale di ore rendicontate a 105 ore per ogni componente del gruppo.
+
+\pagebreak
+\subsubsection{Variazione nei costi}
+\begin{itemize}
+
+\item Sono state rilevate variazioni nei costi.
+
+\item Si riportano le tabelle di divisione oraria effettive e i relativi costi. \textbf{Nota}: le variazioni tra parentesi si riferiscono all'ultimo preventivo a finire presentato.
+
+\end{itemize}
+
+\begin{figure}[H]
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+\makebox[\textwidth][c]
+{
+  \begin{tabular}{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
+    \PB & 3 & 8 & 0 & 8 & 0 & 20 (+1)& 39 (+1) \\ \hline
+    \LB & 3 & 0 & 0 & 0 & 10 & 7 (+1) & 20 (+1) \\ \hline
+    \GG & 0 & 0 & 0 & 0 & 10 & 19 (+1) & 29 (+1) \\ \hline
+    \MM & 0 & 0 & 2 & 0 & 10 & 14 (+1) & 26 (+1) \\ \hline
+    \LS & 0 & 0 & 0 & 0 & 0 & 21 (+1) & 21 (+1) \\ \hline
+    \AZ & 0 & 0 & 0 & 0 & 0 & 21 (+1) & 21 (+1) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale ore/ruolo & 6 & 8 & 2 & 8 & 30 & 102 (+6) & 156 (+6) \\ \hline
+    
+  \end{tabular}
+  }
+    \caption{Ore/ruolo per persona durante la \VV.}
+
+\end{figure} 
+% i colori danno problemi di visualizzazione alle linee
+
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+  \begin{tabular}{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
+    \PB & 90 & 160 & 0 & 176 & 0 & 300 (+15) & 726 (+15) \\ \hline
+    \LB & 90 & 0 & 0 & 0 & 150 & 105 (+15) & 345 (+15) \\ \hline
+    \GG & 0 & 0 & 0 & 0 & 150 & 285 (+15) & 435 (+15)\\ \hline
+    \MM & 0 & 0 & 50 & 0 & 150 & 210 (+15) & 410 (+15) \\ \hline
+    \LS & 0 & 0 & 0 & 0 & 0 & 315 (+15) & 315 (+15) \\ \hline
+    \AZ & 0 & 0 & 0 & 0 & 0 & 315 (+15) & 315 (+15) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale euro/ruolo & 180 & 160 & 50 & 176 & 450 & 1530 (+150) & 2546 (+150) \\ \hline
+  \end{tabular}
+  
+}\label{tab:cpdc}
+
+  \caption{Tabella costo {\VV} per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
+
+
+%%%% DA FARE ANCORA (so' stanco)
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+  \begin{tabular}{ | l | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo  & Ore & Costo \\ \hline
+    \V & 156 (+6) & 2546 (+150) \\ \hline
+    \rowcolor[gray]{.9}
+
+   Differenza & +6 & +150 \\ \hline
+  \end{tabular}
+  
+}
+
+\label{tab:car}
+\caption{Differenza preventivo-consuntivo per ruolo, \PDC. Colonna \emph{Costo} in euro (\euro).}
+\end{figure}
+
+\subsubsection{Considerazioni}
+
+Il nuovo preventivo a finire precedentemente presentato è stato rispettato in pieno: al fine di conseguire la maggior qualità possibile con le risorse a disposizione è stato deciso di incrementate di 6 ore le attività preventivate per la verifica.
+
+A seguito della riunione esterna del 04-05-2017, nel quale è stato presentato il lavoro fino ad allora svolto, il team è riuscito a presentare un prodotto che è riuscito a soddisfare appieno le richieste e i desideri del cliente. Sono stati raccolti consigli su come raffinare il prodotto finale sfruttando il budget aumentato per le ore di \Vx.
+
+
+
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
