--- a/Interni/Norme_di_progetto/Norme_di_progetto_3_0_0.tex
+++ b/Interni/Norme_di_progetto/Norme_di_progetto_3_0_0.tex
@@ -100,7 +100,7 @@ Il presente documento si divide in tre sezioni principali:
 \section{Processi primari} \label{sec:primari}
 
 
-\subsection{Fornitura}
+\subsection{Fornitura} \label{sec:fornitura}
 
 \subsubsection{Studio di fattibilità}
 La fase antecedente alla realizzazione del progetto consiste nel fissare delle riunioni in modo che il gruppo possa discutere di esso. È poi compito degli analisti redigere lo Studio di Fattibilità (\SdF), sulla base di ciò che è emerso dalle riunioni (come ad esempio il dominio applicativo del capitolato).
