--- a/Interni/Norme_di_progetto/diario.tex
+++ b/Interni/Norme_di_progetto/diario.tex
@@ -2,6 +2,9 @@
 % da includere con \include{diario}
 
 \begin{diario}
+%	4.0.0 & {\LB} (Responsabile) & 12/05/2017 & Approvazione del documento \\ \hline
+%	3.1.0 & {\GG} (Verificatore) & 28/03/2017 & Verifica del documento \\ \hline
+	3.0.1 & {\PB} (Amministratore) & 02/05/2017 & Ampliamento sezione \ref{sec:fornitura} \\ \hline
 	3.0.0 & {\MM} (Responsabile) & 10/04/2017 & Approvazione del documento \\ \hline
 	2.2.0 & {\GG} (Verificatore) & 31/03/2017 & Verifica del documento \\ \hline
 	2.1.3 & {\PB} (Amministratore) & 31/03/2017 & Inserita sezione \ref{sec:integraz} \\ \hline
