pdp (forse dovrei aggiungere qualche grafico ma il grosso è fatto

--- a/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
@@ -1167,7 +1167,7 @@ Il quantitativo rendicontato a preventivo a persona è di \textbf{103 ore} e il 
     \AZ & 2 & 5 & 8 & 41 & 30 & 17 & 103 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale ore/ruolo & 15 & 29 & 15 & 264 & 180 & 125 & 618 \\ \hline
+    Totale ore/ruolo & 15 & 29 & 15 & 264 & 180 & 115 & 618 \\ \hline
     
   \end{tabular}
   }
@@ -1805,7 +1805,7 @@ A fronte della scelta presa di riequilibrare il carico, si presenta successivame
 
 Si segnala che la cifra risparmiata nel periodo di \PA{}, pari a 73\euro{}, è stata reinvestita nella \VV a supporto di attività di verifica e test.
 
-Non sono state portate a termine tutte le attività di codifica dei test, in particolare i test di sistema ed integrazione: tuttavia essi sono stati specificati all'interno del documento \PdQ.
+Non sono state portate a termine tutte le attività di codifica dei test, in particolare i test di sistema ed integrazione: tuttavia essi sono stati specificati all'interno del documento \emph{Piano di Qualifica}.
 
 %Il \Rx{} ha tentato di incentivare il gruppo ad utilizzare Github Issues al fine tracciare 
 
@@ -2090,10 +2090,114 @@ Il nuovo preventivo a finire precedentemente presentato è stato rispettato in p
 
 A seguito della riunione esterna del 04-05-2017, nel quale è stato presentato il lavoro fino ad allora svolto, il team è riuscito a presentare un prodotto che è riuscito a soddisfare appieno le richieste e i desideri del cliente. Sono stati raccolti consigli su come raffinare il prodotto finale sfruttando il budget aumentato per le ore di \Vx.
 
+\pagebreak
+\subsection{Consuntivo finale}
+
+Si riporta il consuntivo dell'intero sviluppo del progetto delle sole ore rendicontate (dunque, \textbf{a carico del cliente}).
+
+Sono indicate di seguito l'effettivo lavoro svolto complessivo in ore e tra parentesi quanto esse sono scostate dal preventivo iniziale.
+
+Il quantitativo rendicontato a consuntivo a persona è di \textbf{105 ore} e il quantitativo di ore a consuntivo totali è fissato a \textbf{630 ore}.
+
+\begin{figure}[H]
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+\makebox[\textwidth][c]
+{
+  \begin{tabular}[width=1.2\textwidth]{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
+    \PB & 3 & 8 & 0 & 34 (-10) & 27 (-3) & 32 (+14) & 105 (+2) \\ \hline
+    \LB & 3 & 8 & 0 & 38 (-8) & 37 (+7) & 18 (+2) & 105 (+2) \\ \hline
+    \GG & 3 & 5 & 0 & 35 (-10) & 37 (+7) & 24 (+4) & 105 (+2) \\ \hline
+    \MM & 2 & 0 & 2 & 39 (-3) &  37 (+7) & 24 (-3) & 105 (+2) \\ \hline
+    \LS & 2 & 3 & 5 & 28 (-18) & 27 (-3) & 39 (+22) & 105 (+2) \\ \hline
+    \AZ & 2 & 5 & 8 & 23 (-18) & 27 (-3) & 39 (+22) & 105 (+2) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale ore/ruolo & 15 & 29 & 15 & 197 (-67) & 192 (+12) & 182 (+67) & 630 (+12) \\ \hline
+    
+  \end{tabular}
+  }
+  
+  \label{tab:rend}
+
+  \caption{Tabella costo generale a consuntivo per ruolo e per persona, valori in euro (\euro).}
+\end{figure} 
+
+\subsubsection{Costo ore rendicontate del progetto a consuntivo}
+
+Di seguito si riporta il costo delle ore totali rendicontate, suddiviso per persona e ruolo.
+
+Questo quadro riassuntivo esclude il periodo di \AR{}: i costi che seguono \textbf{sono a carico del cliente}.
 
 
 
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
 
+  \begin{tabular}{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
+    \PB & 90 & 160 & 0 & 748 (-220) & 405 (-45) & 495 (+225) & 1898 (-40) \\ \hline
+    \LB & 90 & 160 & 0 & 836 (-176) & 555 (+105) & 285 (+45) & 1926 (-26) \\ \hline
+    \GG & 90 & 100 & 0 & 770 (-220) &  555 (+105) & 375 (+75) & 1890 (-40) \\ \hline
+    \MM & 60 & 0 & 50 & 858 (-66) &  555 (+105) & 375 (-30) & 1898 (+9) \\ \hline
+    \LS & 60 & 60 & 125 & 616 (-396) & 405 (-45) & 600 (+345) & 1866 (-96) \\ \hline
+    \AZ & 60 & 100 & 200 & 506 (-396) & 405 (-45) & 600 (+345) & 1871 (-96) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale euro/ruolo & 450 & 580 & 375 & 4334 (-1474) & 2880 (+180) & 2640 (+915) & 11349 (-289) \\ \hline
+  \end{tabular}
+  
+}\label{tab:cgen}
+\end{figure}
+\pagebreak
+\subsection{Considerazioni finali}
+\subsubsection{Aumento attività verifica}
+Il presente \emph{Piano di Progetto} ha ricevuto vari incrementi nel tempo, ma la modifica più critica è stata la riassegnazione di parte delle risorse alle attività di verifica, sottraendole alle attività preventivate di progettazione.
+
+Questa scelta è risultata soddisfacente per l'attività del team: attraverso varie riunioni con il proponente è stato possibile trovare un punto d'incontro che ci ha permesso di ridurre le richieste progettuali e concentrarci nel conseguimento degli obiettivi posti nel \emph{Piano di Qualifica}.
+
+\subsubsection{Pianificazione di \PDC e \VV}
+La pianificazione di queste due fasi ha ricevuto una sostanziale modifica, come già indicato nel consuntivo di periodo rispettivo.
+
+Al termine del progetto, possiamo concludere che la \VV non ne abbia risentito: le attività preventivate sono state svolte senza ritardi ed è stato possibile consegnare il prodotto in tempo. 
+ 
+\subsubsection{Specializzazione dei componenti del team}
+È stato possibile notare durante l'individuazione e assegnazione delle sotto-attività necessarie a completare le attività principali (visualizzate nel presente \emph{Piano di Progetto} tramite diagrammi di Gantt) come i singoli membri del team si siano \textbf{specializzati} in una o più mansioni. Questo è stato di grande aiuto:
+
+\begin{itemize}
+\item la presenza di un membro del gruppo più informato in un ruolo ha permesso di istruire efficacemente gli altri componenti durante i cambi di ruolo;
+\item questa figura si traduce in una figura "senior": questa può supervisionare il lavoro degli altri componenti, riferire l'andamento delle attività al \Rx, comprendere più in profondità le criticità da risolvere.
+\end{itemize} 
+
+Tuttavia la specializzazione dei membri del gruppo avviene ad un prezzo: un maggior costo in ore. È stato dunque necessario ridistribuire le ore assegnate per i componenti al fine di possedere una rendicontazione fedele a quanto avvenuto.
+
+Di seguito si indicano i ruoli assunti maggiormente dai componenti del gruppo, qualora non fosse già chiara dal consuntivo indicato in precedenza; tuttavia ciò non implica che ogni componente non abbia avuto la possibilità di cimentarsi in ogni ruolo del progetto.
+
+\begin{itemize}
+\item[\PB] \ANx{};
+\item[\LB] \Rx{}, \PGx{};
+\item[\GG] \AMx{}, \Vx{}, \PGx{};
+\item[\MM] \PJx{}, \PGx{};
+\item[\LS] \Vx{};
+\item[\AZ] \Vx{};
+\end{itemize}
+
+\pagebreak
+\subsubsection{Costo totale}
+Il costo totale \textbf{a carico del cliente} è pari a \textbf{11349\euro} (\textit{undicimilatrecentoquarantanove euro}).
+
+Questo costo differisce per una cifra negativa (-289\euro) rispetto a quanto preventivato. Ciò è imputabile alla riassegnazione oraria delle attività: sottraendo ore alle attività di progettazione e aggiungendone in egual misura alle attività di verifica risulta un risparmio del 20\% a causa dei differenti costi dei due ruoli. Sono state investite maggiori risorse nelle attività di codifica fino al raggiungimento delle 105 ore/persona massime consentite.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
