diario (woo miracolo) (no dai, spero vada bene, sennò ditemi)

--- a/Esterni/Piano_di_progetto/diario.tex
+++ b/Esterni/Piano_di_progetto/diario.tex
@@ -2,6 +2,18 @@
 % da includere con \include{diario}
 
 \begin{diario}
+
+	4.0.0 & {\PB} (Responsabile) & 05/05/2017 & Approvazione documento \\ \hline
+
+	3.1.0 & {\PB} (Verificatore) & 04/05/2017 & Verifica documento \\ \hline
+
+	3.0.3 & {\LB} (Responsabile) & 02/05/2017 & Stesura Consuntivo finale \\ \hline
+
+	3.0.2 & {\LB} (Responsabile) & 01/05/2017 & Aggiornato consuntivo di periodo per \VV \\ \hline
+	
+	3.0.1 & {\LB} (Responsabile) & 30/04/2017 & Ampliata sezione \ref{sec:rischi} con \VV{}. \\ \hline
+	
+
 	3.0.0 & {\LS} (Responsabile) & 10/04/2017 & Approvazione documento \\ \hline
 	2.1.0 & {\LB} (Verificatore) & 28/03/2017 & Verifica documento \\ \hline
 	2.0.3 & {\AZ} (Responsabile) & 19/03/2017 & Aggiornata preventivo a finire \\ \hline
